--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="col-xl-15 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Current Lab Members</span>
+                                <span class="section-heading-upper">Current PhD Students</span>
                             </h2>
 
 			<table align="center" frame=hsides rules=rows>
@@ -50,8 +50,7 @@
   			  <tr>
 			      <th scope="col"></th>
 			      <th scope="col">Contact</th>
-			      <th scope="col">Projects</th>
-			      <th scope="col">Program</th>
+			      <th scope="col">Research Topics</th>
 			    </tr>
 			  </thead>
 			  <tbody>
@@ -59,28 +58,58 @@
 			      <th scope="row">Gerald Collom</th>
 			      <td><a href="mailto:geraldc@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/gerald-collom-a980bb114"><i class='fab fa-linkedin-in'></i></a></td>
 			      <td>Locality-aware aggregation, partitioned communication, neighbor collectives</td>
-			      <td>PhD</td>
 			    </tr>
 			    <tr>
 			      <th scope="row">Shannon Kinkead</th>
 			      <td><a href="mailto:sgkinkead@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/shannonkinkead/"><i class='fab fa-linkedin-in'></i></a></td>
 			      <td>SST, collective operations, dragonfly networks</td>
-			      <td>PhD</td>
 			    </tr>
 			    <tr>
 			      <th scope="row">Mike Adams</th>
 			      <td><a href="mailto:mikethebos@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/mike-adams-74a02a228/"><i class='fab fa-linkedin-in'></i></a></td>			      
-			      <td>Heterogeneous communciation operations, GPU-Aware collectives and neighbor collectives</td>
-			      <td>PhD</td>
+			      <td>Heterogeneous communciation, GPU-Aware, collectives, and neighbor collectives</td>
 			    </tr>
 			    <tr>
 			      <th scope="row">Jackson Wesley</th>
 			      <td><a href="mailto:jwesley1@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/jackson-wesley/"><i class='fab fa-linkedin-in'></i></a></td>
-			      <td>Benchmarking and optimizing many-core nodes, Sapphire Rappids, Grace-Grace architectures</td>
-			      <td>PhD</td>
+			      <td>Benchmarking and optimizing communication on Many-core computers</td>
 			    </tr>
 			  </tbody>
 			</table>
+
+				<p style="margin-bottom:3cm;"></p>
+
+			<h2 class="section-heading mb-4">
+                                <span class="section-heading-upper">Group Alumni</span>
+                            </h2>
+
+			<table align="center" frame=hsides rules=rows>
+  			  <thead>
+  			  <tr>
+			      <th scope="col"></th>
+			      <th scope="col">Contact</th>
+			      <th scope="col">Group Projects</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <th scope="row">Andrew Geyko, BS</th>
+			      <td><a href="mailto:ageyko@mpi-sws.org"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/andrew-geyko-62b41a22b"><i class='fab fa-linkedin-in'></i></a></td>
+			      <td>Locality-Aware Topology Discovery</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">Amun Kharel, BS</th>
+			      <td><a href="mailto:akharel@vt.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/amun-kharel-b1848419b"><i class='fab fa-linkedin-in'></i></a></td>
+			      <td>Locality-Aware Bruck Allgather</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">Shreeman Gautam, BS</th>
+			      <td><a href="mailto:u1092041@utah.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/shreeman-gautam-b-s-in-cs-b4018016a/"><i class='fab fa-linkedin-in'></i></a></td>			      
+			      <td>Locality-Aware Bruck Allgather</td>
+			    </tr>
+			  </tbody>
+			</table>
+
 			    
                         </div>
                     </div>
