--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">University of New Mexico</span>
-                <span class="site-heading-lower">Scalable Solvers Lab</span>
+                <span class="site-heading-upper text-primary mb-3">Assistant Professor</span>
+                <span class="site-heading-lower">Amanda Bienz</span>
             </h1>
         </header>
         <!-- Navigation-->
