--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
 			      <td><a href="mailto:jwesley1@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/jackson-wesley/"><i class='fab fa-linkedin-in'></i></a></td>
 			      <td>Benchmarking and optimizing communication on Many-core computers</td>
 			    </tr>
+			    <tr>
+			      <th scope="row">Christopher Ong</th>
+			      <td><a href="mailto:cong1@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/c-ong/"><i class='fab fa-linkedin-in'></i></a></td>
+			      <td>Architeture-aware performance modeling and graph partitioning</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">Vanessa Surjadidjaja</th>
+			      <td><a href="mailto:vsurjadidjaja@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/vanessasurjadidjaja/"><i class='fab fa-linkedin-in'></i></a></td>
+			      <td>Utilizing feedback from LDMS to improve performance</td>
+			    </tr>
+			    <tr>
+			      <th scope="row">Ryan Gangaram</th>
+			      <td><a href="mailto:srgangaram@unm.edu"><i class='fa fa-envelope'></i></a> <a href="https://www.linkedin.com/in/vrgangaram"><i class='fab fa-linkedin-in'></i></a></td>
+			      <td>Parallel scientific AI</td>
+			    </tr>
+
 			  </tbody>
 			</table>
 
