--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
 			    </tr>
 			  </thead>
 			  <tbody>
-			   
+				<tr>
+			      <th>2026</th>
+                  <td><b>The Case of the Mysterious Citations</b>, <mark class="red">Amanda Bienz</mark>, Carl Pearson, and Simon Garcia de Gonzalo.  In Submission: CiSE Special Issue on Controversies on the Usage of AI/ML for Science and Engineering.</td>
+			      <td><a href="assets/papers/2026_preprint_citations.pdf"><i class='fa fa-file-pdf'></i></a></td>
+
+			    </tr>
+				  
                   <tr>
 			      <th>2025</th>
                   <td><b>Scaling All-to-all Operations Across Emerging Many-Core Supercomputers</b>, <mark class="red">Shannon Kinkead</mark>, <mark class="red">Jackson Wesley</mark>, Whit Schonbein, David DeBonis, Matthew G. F. Dosanjh, and <mark class="red">Amanda Bienz</mark>.  Proceedings of the SC '25 Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis.</td>
